# oscope

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
include/oscope/: common.h  coupling.h  oscope.h  sample.h  version.h
oscope_app.xcodeproj/: project.pbxproj
oscope_app.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/app/: Application.cpp  Application.hpp  NonMovableWindow.cpp  NonMovableWindow.hpp  ScreenDimensions.mm  ScreenDimensions_X.cpp  main.cpp
src/lib/: sample.cpp  version.cpp
